# G2048

./: CMakeLists.txt  README.md  Readme.md  game.cpp  game.hpp  main.cpp
.cache/clangd/index/: game.cpp.3C7F2050307E3DD2.idx  game.cpp.C8F22CAF1FC1482E.idx  game.hpp.C8CEDFAF3A7DB762.idx  game.hpp.E4127C6382DEB0E2.idx  main.cpp.59885F2E3AC1020F.idx  main.cpp.A58E1D1E6AA722D4.idx
Debug/: CMakeLists.txt
Debug/Lib/: G_Lib.lib
Release/: CMakeLists.txt
Release/Lib/: G_LR.lib
include/: game.hpp
lib/: G_lib.lib
src/: game.cpp  main.cpp
